--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@hypernym/nuxt-gsap": "^2.4.2",
     "@nuxtjs/device": "^3.1.1",
+    "@vite-pwa/nuxt": "^0.5.0",
     "nuxt": "^3.9.3",
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
