--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@hypernym/nuxt-gsap": "^2.4.2",
     "@nuxtjs/device": "^3.1.1",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@vite-pwa/nuxt": "^0.5.0",
+    "eslint": "^8.57.0",
     "nuxt": "^3.9.3",
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
@@ -21,6 +23,10 @@
   },
   "dependencies": {
     "@fullpage/nuxt-fullpage": "^0.2.5",
-    "nuxt-swiper": "^1.2.2"
+    "@nuxt/content": "^2.12.0",
+    "@pinia/nuxt": "^0.5.1",
+    "geolib": "^3.3.4",
+    "nuxt-swiper": "^1.2.2",
+    "pinia": "^2.1.7"
   }
 }
