--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nuxt/content": "^2.12.0",
     "@pinia/nuxt": "^0.5.1",
     "geolib": "^3.3.4",
+    "mitt": "^3.0.1",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.1.7"
   }
